更改了 md 文章的标点，以及 代码块&& 英文排版，优化阅读体验

--- a/article/安传旭_实习生存指南.md
+++ b/article/安传旭_实习生存指南.md
@@ -1,21 +1,21 @@
 # 实习生存指南
 
-2020年5月14日星期四,南京,天气阴转小雨.窗外非常有规律的传来高铁的声音.已经正式入职月余的我,终于沉淀下来回望过去的研究生生涯,和穿插其中丰富的实习生活,作为对过去实习岁月的总结,和未来工作的展望.
+2020 年 5 月 14 日星期四，南京，天气阴转小雨。窗外非常有规律的传来高铁的声音。已经正式入职月余的我，终于沉淀下来回望过去的研究生生涯，和穿插其中丰富的实习生活，作为对过去实习岁月的总结，和未来工作的展望。
 
-人生的第一份实习,还是在大三暑假,学校组织了一次校企合作的实习项目,而那短短的两个周内,我们基本上也就熟悉了下职场的环境,技术和知识的获取是相当有限的,以至于在后来的回忆里,那次更像是一次集体"旅行".
+人生的第一份实习，还是在大三暑假，学校组织了一次校企合作的实习项目，而那短短的两个周内，我们基本上也就熟悉了下职场的环境，技术和知识的获取是相当有限的，以至于在后来的回忆里，那次更像是一次集体"旅行"。
 
-第一份真正的实习,开始在大学毕业的夏天.刚从冰城毕业的我准备在研究生开学之前找份实习,锻炼下自己.机缘巧合,吴老师正在招实习生.经过一轮简单的电话面试,吴老师给了我一个远程实习的机会.当时招聘的是`ROS`开发实习生.而坦率的讲,本科毕业的我除了`C++`语言之外,和这个实习生招聘要求条件相差甚远.我并不懂什么是`ROS`,也没有接触过机器人,仅仅觉得做机器人非常的高大上,听起来就是一件不沉闷有意思的事情,就选择努力争取到这个机会,打开一扇新世界的大门.
+第一份真正的实习，开始在大学毕业的夏天。刚从冰城毕业的我准备在研究生开学之前找份实习，锻炼下自己。机缘巧合，吴老师正在招实习生。经过一轮简单的电话面试，吴老师给了我一个远程实习的机会。当时招聘的是 `ROS` 开发实习生。而坦率的讲，本科毕业的我除了 `C++` 语言之外，和这个实习生招聘要求条件相差甚远。我并不懂什么是 `ROS` ，也没有接触过机器人，仅仅觉得做机器人非常的高大上，听起来就是一件不沉闷有意思的事情，就选择努力争取到这个机会，打开一扇新世界的大门。
 
-在吴老师团队实习过的同学都知道,我们团队有一套实习生的评级准则,实习生也许刚进入团队评级很低,比如刚出"新手村"就是lv2,经过一段时间的"打怪升级"提升自己的能力,就会被升级到lv3,lv4甚至lv5.而现在的标准是低于lv2无法进入实习团队的,要继续私下提升自己,经过再次面试达到lv2方可通过.而当初的我,被惨淡的评为了lv0,也就是俗称的小白.预估产出是0.现在看起来,第一个月更像是实习培训期,吴老师安排了我跟着柴老师学习`ROS`相关知识,并在一定范围内打打下手,辅助柴老师做一些工作.就这样,我在忐忑又充满憧憬的心情中,开启了我在软件所的实习生涯.
+在吴老师团队实习过的同学都知道，我们团队有一套实习生的评级准则，实习生也许刚进入团队评级很低，比如刚出"新手村"就是 lv2 ，经过一段时间的"打怪升级"提升自己的能力，就会被升级到 lv3 ，lv4 甚至 lv5。而现在的标准是低于 lv2 无法进入实习团队的，要继续私下提升自己，经过再次面试达到lv2方可通过。而当初的我，被惨淡的评为了 lv0 ，也就是俗称的小白。预估产出是 0 。现在看起来，第一个月更像是实习培训期，吴老师安排了我跟着柴老师学习 `ROS` 相关知识，并在一定范围内打打下手，辅助柴老师做一些工作。就这样，我在忐忑又充满憧憬的心情中，开启了我在软件所的实习生涯。
 
-当初选择来北京读研,有一个很重要的原因,就是看中了北京异常多的实习机会,可以接触到行业最新的技术.希望能够在研究生期间多多实践,为了未来的工作打好基础,即使将来选择继续读书,实习也是很好的一个锻炼,从中学到的东西有些是实验室和书本给不了的.所以我也鼓励大家有实习的机会,一定要好好把握,多多实习,多多扩充自己的知识边界.话题继续回到我们的实习生活中来,最初的实习,刚刚也说过了,就是单方面的培训.我开始按照吴老师和柴老师的指导,针对性的学习大量的专业技能知识,比如`Linux`,`ROS`,`Git`,`Cmake`等等.刚开始的一个月里,遭受到了很大的打击.比如最简单的安装`ROS`,重装了几次`ubuntu`系统才成功的安装了ROS,中途遇到的任何问题对于我而言都是全新的,也是痛苦的.比如一个软件包无法找到,就可能要了我一个下午的时间和数十根的头发.全新的知识带来的欢愉也是无可比拟的,第一次启动小乌龟,第一次向它发布指令`rostopic pub`,看着小乌龟在我的屏幕上移动,那种充实的收获感,瞬间就使我忘记了那个抓耳挠腮的下午,带给人的快乐堪比夏日里的冰镇西瓜...
+当初选择来北京读研，有一个很重要的原因，就是看中了北京异常多的实习机会，可以接触到行业最新的技术。希望能够在研究生期间多多实践，为了未来的工作打好基础，即使将来选择继续读书，实习也是很好的一个锻炼，从中学到的东西有些是实验室和书本给不了的。所以我也鼓励大家有实习的机会，一定要好好把握，多多实习，多多扩充自己的知识边界。话题继续回到我们的实习生活中来，最初的实习，刚刚也说过了，就是单方面的培训。我开始按照吴老师和柴老师的指导，针对性的学习大量的专业技能知识，比如 `Linux` ， `ROS` ， `Git` ， `Cmake` 等等。刚开始的一个月里，遭受到了很大的打击。比如最简单的安装 `ROS` ，重装了几次 `ubuntu` 系统才成功的安装了ROS，中途遇到的任何问题对于我而言都是全新的，也是痛苦的。比如一个软件包无法找到，就可能要了我一个下午的时间和数十根的头发。全新的知识带来的欢愉也是无可比拟的，第一次启动小乌龟，第一次向它发布指令 `rostopic pub` ，看着小乌龟在我的屏幕上移动，那种充实的收获感，瞬间就使我忘记了那个抓耳挠腮的下午，带给人的快乐堪比夏日里的冰镇西瓜。。。
 
-后来的实习就慢慢跟上了节奏,不断的学习新知识,不断的扩充自己的知识边界,也经常在各种error和bug里走不出来,也会不时的做出一点新的东西开心一整天.吴老师时常给我们灌输的理念是"精英自治".自觉主动学习的习惯,应该是大学教会我们的,研究生期间,我们应该学会独立思考和创新,在面对问题的时候要自己想办法解决,这里并不表示说建议自己闷头苦干,想办法的意思是指包括独立思考,查资料问谷歌,团队协作以及寻求帮助,积极主动的"自治",这是我们团队所倡导的,也是一直贯彻的理念.后来的实习中,不断的涉足到新的领域,学习到新的知识和技能,但是”自治”的理念才是学习到的最宝贵的东西.
+后来的实习就慢慢跟上了节奏，不断的学习新知识，不断的扩充自己的知识边界，也经常在各种 error 和 bug 里走不出来，也会不时的做出一点新的东西开心一整天。吴老师时常给我们灌输的理念是"精英自治"。自觉主动学习的习惯，应该是大学教会我们的，研究生期间，我们应该学会独立思考和创新，在面对问题的时候要自己想办法解决，这里并不表示说建议自己闷头苦干，想办法的意思是指包括独立思考，查资料问谷歌，团队协作以及寻求帮助，积极主动的"自治"，这是我们团队所倡导的，也是一直贯彻的理念。后来的实习中，不断的涉足到新的领域，学习到新的知识和技能，但是”自治”的理念才是学习到的最宝贵的东西。
 
-这段实习经历带给了我很多,不仅是简历上非常有分量的一笔,也成为了我留在这里工作最重要的原因.毕业前夕的秋招中,几乎面试的每家单位都会问及该段实习,想必也是参与实习项目比较丰富,拿到了几个还不错的offer,当然其中也有吴老师提供的正式offer.权衡了之后决定留在这个积极向上的团队,继续前进.此外这段实习生涯,也认识到了很多的大佬,结交了很多好友,同一级的实习生经过了秋招有的也留在了团队里,有的成为了我们的甲方,还有的继续读书,总之都变成了我们各自心中更好的自己.
+这段实习经历带给了我很多，不仅是简历上非常有分量的一笔，也成为了我留在这里工作最重要的原因。毕业前夕的秋招中，几乎面试的每家单位都会问及该段实习，想必也是参与实习项目比较丰富，拿到了几个还不错的 offer，当然其中也有吴老师提供的正式 offer 。权衡了之后决定留在这个积极向上的团队，继续前进。此外这段实习生涯，也认识到了很多的大佬，结交了很多好友，同一级的实习生经过了秋招有的也留在了团队里，有的成为了我们的甲方，还有的继续读书，总之都变成了我们各自心中更好的自己。
 
-所以,同学们,如果有机会,珍惜每一次的实习机会,如果有机会,欢迎加入我们!`do you can do ,try your best!`
+所以，同学们，如果有机会，珍惜每一次的实习机会，如果有机会，欢迎加入我们！ `do you can do ，try your best!`
 
-2020,祝你健康.
+2020，祝你健康。
 
->中科院软件所智能机器人研究中心-安传旭.
+>中科院软件所智能机器人研究中心-安传旭。
