🛠️ 修改 日期格式 && 英文标点

--- a/article/安传旭_实习生存指南.md
+++ b/article/安传旭_实习生存指南.md
@@ -1,6 +1,6 @@
 # 实习生存指南
 
-2020 年 5 月 14 日星期四，南京，天气阴转小雨。窗外非常有规律的传来高铁的声音。已经正式入职月余的我，终于沉淀下来回望过去的研究生生涯，和穿插其中丰富的实习生活，作为对过去实习岁月的总结，和未来工作的展望。
+2020年5月14日星期四，南京，天气阴转小雨。窗外非常有规律的传来高铁的声音。已经正式入职月余的我，终于沉淀下来回望过去的研究生生涯，和穿插其中丰富的实习生活，作为对过去实习岁月的总结，和未来工作的展望。
 
 人生的第一份实习，还是在大三暑假，学校组织了一次校企合作的实习项目，而那短短的两个周内，我们基本上也就熟悉了下职场的环境，技术和知识的获取是相当有限的，以至于在后来的回忆里，那次更像是一次集体"旅行"。
 
@@ -14,7 +14,7 @@
 
 这段实习经历带给了我很多，不仅是简历上非常有分量的一笔，也成为了我留在这里工作最重要的原因。毕业前夕的秋招中，几乎面试的每家单位都会问及该段实习，想必也是参与实习项目比较丰富，拿到了几个还不错的 offer，当然其中也有吴老师提供的正式 offer 。权衡了之后决定留在这个积极向上的团队，继续前进。此外这段实习生涯，也认识到了很多的大佬，结交了很多好友，同一级的实习生经过了秋招有的也留在了团队里，有的成为了我们的甲方，还有的继续读书，总之都变成了我们各自心中更好的自己。
 
-所以，同学们，如果有机会，珍惜每一次的实习机会，如果有机会，欢迎加入我们！ `do you can do ，try your best!`
+所以，同学们，如果有机会，珍惜每一次的实习机会，如果有机会，欢迎加入我们！ `do you can do,try your best!`
 
 2020，祝你健康。
 
